# kore-launcher-desktop

./: .gitignore  README.md  config-node.json  config.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: App.tsx  Check.tsx  GenerateCrypto.tsx  ImportCrypto.tsx  Layout.tsx  Node.tsx  Sidebar.tsx  SidebarItem.tsx  WaitBridge.tsx
src/i18n/: i18n.ts
src/styles/: Main.css
src/utils/: bridgeUtils.ts
