[package]
name = "mongoo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mongoo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kore-bridge = { path = "../../kore/kore-bridge" }
tokio = { version = "1.43.0", features = ["full"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[dependencies.openssl]
version = "0.10.71"  # or whichever version you are using
features = ["vendored"]

[dependencies.rusqlite]
version = "0.32.0"
features = ["bundled"]
